fixed welcome image alignment on the right

--- a/assets/css/main-page-green.scss
+++ b/assets/css/main-page-green.scss
@@ -1046,7 +1046,7 @@ abbr{
 
 .welcome {
     background: url("../assets/images/DC-Hero-Image.png") no-repeat;
-    background-size: 100% 100%;
+    background-size: 110% 100%;
     padding: 45px 0;
     color: #fff;
     background-color: #000;
